--- a/src/main/resources/templates/greeting.mustache
+++ b/src/main/resources/templates/greeting.mustache
@@ -5,6 +5,6 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-<p>Get your greeting <a href="/greeting">here</a></p>
+<div>Hello, {{z}}</div>
 </body>
 </html>
